css/styles.css
/* OpenSans Regular */
@font-face {
  font-family: "Open Sans";
  src: url("../assets/fonts/open-sans/static/OpenSans-Regular.ttf")
    format("truetype");
  font-weight: normal;
  font-style: normal;
}

/* OpenSans Bold */
@font-face {
  font-family: "Open Sans";
  src: url("../assets/fonts/open-sans/static/OpenSans-Bold.ttf")
    format("truetype");
  font-weight: bold;
  font-style: normal;
}

/* OpenSans Italic */
@font-face {
  font-family: "Open Sans";
  src: url("../assets/fonts/open-sans/static/OpenSans-Italic.ttf")
    format("truetype");
  font-weight: normal;
  font-style: italic;
}

/* OpenSans Bold Italic */
@font-face {
  font-family: "Open Sans";
  src: url("../assets/fonts/open-sans/static/OpenSans-BoldItalic.ttf")
    format("truetype");
  font-weight: bold;
  font-style: italic;
}

/* ...and so on for other variations */

html,
body {
  font-family: "Open Sans", "Times New Roman", Times, serif !important;
  touch-action: manipulation !important;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

:root {
  --correct-color: #4caf50;
  --correct-color-2: #a8e6cf;
  --wrong-color-3: #f04747; /* Discord Red */
  --correct-color-3: #4b8e79; /* Discord Green */
  --wrong-color: #ff5722;
  --wrong-color-2: #ffadad;
  --reset-color: #3f51b5;
  --text-color: white;
  --text-color-2: #666;
  --exact-color: #ffa500;
  --nitro-color: #ff73fa;
  --nitro-color-dark: #cc5bad;
  --dark-color-1: #1e2125;
  --dark-color-2: #23272a;
  --dark-color-3: #2e3136;
  --correct-color-rgb-values: 76, 175, 80;
  --correct-color-2-rgb-values: 168, 230, 207;
  --wrong-color-3-rgb-values: 240, 71, 71;
  --correct-color-3-rgb-values: 75, 142, 121;
  --wrong-color-rgb-values: 255, 87, 34;
  --wrong-color-2-rgb-values: 255, 173, 173;
  --reset-color-rgb-values: 63, 81, 181;
  --text-color-rgb-values: 255, 255, 255;
  --text-color-2-rgb-values: 102, 102, 102;
  --exact-color-rgb-values: 255, 165, 0;
  --nitro-color-rgb-values: 255, 115, 250;
  --nitro-color-dark-rgb-values: 204, 91, 173;
  --dark-color-1-rgb-values: 30, 33, 37;
  --dark-color-2-rgb-values: 35, 39, 42;
  --dark-color-3-rgb-values: 46, 49, 54;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: #f4f4f4;
  margin: 0px;
}

.main-container {
  display: flex;
  flex-direction: column;
}

.container,
.settings-container {
  background-color: #ffffff;
  padding: 20px 40px;
  border-radius: 8px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  margin: 24px;
  display: flex;
  flex-direction: column;
  gap: 12px;
}
.settings-content-container .expanded {
  padding: 0px 48px;
  background-color: #f9f9f9;
  border-radius: 8px;
}

.btn {
  user-select: none;
  transition: ease-in-out 0.15s;
  font-size: 18px;
  padding: 10px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  /* transition: background-color 0.3s; */
  min-width: 150px;
  /* Set a fixed width for the buttons. */
  text-align: center;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

.btn:active {
  transform: translateY(-0.25rem) scale(0.9);
  transition-duration: 0.2s;
}

#resetButton {
  background-color: var(--reset-color);
  color: var(--text-color);
}

.success {
  color: var(--correct-color) !important;
  animation: keyPressAnimation 0.8s ease-in-out; /* Adjust the duration and timing function as needed */
}

.warning {
  color: var(--wrong-color) !important;
  animation: keyPressAnimation 0.8s ease-in-out; /* Adjust the duration and timing function as needed */
}

.exact-good {
  color: var(--exact-color) !important;
}

.exact-bad {
  color: var(--exact-color) !important;
}

.btn:hover {
  opacity: 0.8;
}

#wrongButton,
#correctButton {
  margin-top: 24px;
  height: 120px;
  width: 120px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
  border: none;
  padding: 0px;
  transition: ease-in-out 0.1s;
}

#wrongButton {
  background: radial-gradient(circle, var(--wrong-color), #ff8a50);
  color: var(--text-color);
}

#correctButton {
  background: radial-gradient(circle, var(--correct-color), #80e27e);
  color: var(--text-color);
}

.dark-mode #wrongButton {
  background: radial-gradient(circle, var(--wrong-color-3), #992c2c);
  color: var(--text-color);
}

.dark-mode #correctButton {
  background: radial-gradient(circle, var(--correct-color), #4b8e79);
  color: var(--text-color);
}

/* Dark Mode Success, Warning, and Exact classes */
.dark-mode .success {
  color: var(--correct-color);
}

.dark-mode .warning {
  color: var(--wrong-color-3) !important;
}

#resetButton {
  background-color: var(--reset-color);
  color: var(--text-color);
}

.center-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 48px;
}

.result {
  text-align: center;
  border: solid 2px #f9f9f9;
  padding: 12px;
  margin: 0px;
  color: #ccc;
}

.logo {
  text-align: center;
  margin-bottom: 20px;
}

#pimsleurLogo {
  max-width: 150px;
  /* Adjust as necessary for the logo size. */
  margin-bottom: 10px;
}

.logo p {
  font-size: 14px;
  color: #666;
  margin-top: 10px;
}

.row {
  display: flex;
  justify-content: space-between;
  /* Spaces out the child elements. */
  gap: 20px;
}

/* Custom Checkbox */
.custom-checkbox {
  position: relative;
  padding-left: 35px;
  cursor: pointer;
  display: inline-block;
  margin-right: 20px;
  padding-top: 4px;
}

.custom-checkbox input {
  display: none;
}

.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
  border: 1px solid #ccc;
}

.custom-checkbox:hover input ~ .checkmark {
  background-color: #f5f5f5;
}

.custom-checkbox input:checked ~ .checkmark {
  background-color: #2196f3;
}

.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

.custom-checkbox input:checked ~ .checkmark:after {
  display: block;
}
/* ... */

